--- a/packages/geysers_solar.yaml
+++ b/packages/geysers_solar.yaml
@@ -1,28 +1,28 @@
 automation:
   ## Turn off geysers when solcast below 1kWh
-  - alias: Turn off geysers when solcast below 1.5kWh
-    mode: single
-    trigger:
-      - platform: numeric_state
-        entity_id: sensor.solcast_forecast
-        below: '1'
-      #- platform: numeric_state
-      #  entity_id: sensor.pv_backup_excess
-      #  below: '0'
-    condition:
-      - condition: state  # 'day' condition: from sunrise until sunset
-        entity_id: sun.sun
-        state: 'above_horizon'
-      - condition: time
-        after: '8:00:00'
-        before: '16:59:59'
-    action:
-      - service: switch.turn_off
-        data:
-          entity_id: switch.main_bathroom_geyser
-      - service: switch.turn_off
-        data:
-          entity_id: switch.front_bathroom_geyser
+  #- alias: Turn off geysers when solcast below 1.5kWh
+  #  mode: single
+  #  trigger:
+  #    - platform: numeric_state
+  #      entity_id: sensor.solcast_forecast
+  #      below: '1'
+  #    #- platform: numeric_state
+  #    #  entity_id: sensor.pv_backup_excess
+  #    #  below: '0'
+  #  condition:
+  #    - condition: state  # 'day' condition: from sunrise until sunset
+  #      entity_id: sun.sun
+  #      state: 'above_horizon'
+  #    - condition: time
+  #      after: '8:00:00'
+  #      before: '16:59:59'
+  #  action:
+  #    - service: switch.turn_off
+  #      data:
+  #        entity_id: switch.main_bathroom_geyser
+  #    - service: switch.turn_off
+  #      data:
+  #        entity_id: switch.front_bathroom_geyser
 
   # Front geyser on based on battery
   - alias: Turn on front geyser based on battery
@@ -38,6 +38,8 @@ automation:
       - platform: numeric_state
         entity_id: sensor.main_bathroom_geyser_power
         below: '50'
+      - platform: time
+        at: '13:00:00'
     condition:
       - condition: or
         conditions:
@@ -49,7 +51,7 @@ automation:
           - condition: state
             entity_id: sensor.goodwe_battery_mode_label
             state: 'Standby'
-        - condition: and
+        - condition: or
           conditions:
           - condition: numeric_state
             entity_id: sensor.goodwe_battery_charge_limit
@@ -84,7 +86,7 @@ automation:
           entity_id: timer.front_geyser
           state: 'idle'
           for:
-            hours: 5
+            hours: 4
         - condition: state
           entity_id: timer.front_geyser
           state: 'active'
@@ -97,7 +99,7 @@ automation:
         data_template:
           entity_id: timer.front_geyser
           duration: >
-            {{ 120 | int * 60 }}
+            {{ 180 | int * 60 }}
       - service: switch.turn_off
         data:
           entity_id: switch.main_bathroom_geyser
@@ -114,6 +116,8 @@ automation:
       - platform: numeric_state
         entity_id: sensor.goodwe_battery_charge_limit
         below: '74'
+      - platform: time
+        at: '11:00:00'
     condition:
       - condition: or
         conditions:
@@ -125,7 +129,7 @@ automation:
           - condition: state
             entity_id: sensor.goodwe_battery_mode_label
             state: 'Standby'
-        - condition: and
+        - condition: or
           conditions:
           - condition: numeric_state
             entity_id: sensor.goodwe_battery_charge_limit
@@ -157,7 +161,7 @@ automation:
           entity_id: timer.main_geyser
           state: 'idle'
           for:
-            hours: 5
+            hours: 4
         - condition: state
           entity_id: timer.main_geyser
           state: 'active'
@@ -177,7 +181,7 @@ automation:
         data_template:
           entity_id: timer.main_geyser
           duration: >
-            {{ 120 | int * 60 }}
+            {{ 180 | int * 60 }}
       - condition: state
         entity_id: switch.pool_pump
         state: 'on'
@@ -189,47 +193,47 @@ automation:
           entity_id: timer.pool_pump
 
   ## Turn off main geyser when only main geyser on and above 5kW non-essential
-  - alias: Turn off main geyser when high kW
-    mode: single
-    trigger:
-      - platform: numeric_state
-        entity_id: sensor.energy_non_essentials
-        above: '5000'
-        for:
-          seconds: 30
-    condition:
-      - condition: state
-        entity_id: switch.main_bathroom_geyser
-        state: 'on'
-      - condition: state
-        entity_id: switch.front_bathroom_geyser
-        state: 'off'
-      - condition: time
-        after: '8:00:00'
-        before: '16:59:59'
-    action:
-      - service: switch.turn_off
-        data:
-          entity_id: switch.main_bathroom_geyser
+  #- alias: Turn off main geyser when high kW
+  #  mode: single
+  #  trigger:
+  #    - platform: numeric_state
+  #      entity_id: sensor.energy_non_essentials
+  #      above: '5000'
+  #      for:
+  #        seconds: 30
+  #  condition:
+  #    - condition: state
+  #      entity_id: switch.main_bathroom_geyser
+  #      state: 'on'
+  #    - condition: state
+  #      entity_id: switch.front_bathroom_geyser
+  #      state: 'off'
+  #    - condition: time
+  #      after: '8:00:00'
+  #      before: '16:59:59'
+  #  action:
+  #    - service: switch.turn_off
+  #      data:
+  #        entity_id: switch.main_bathroom_geyser
 
   ## Turn off front geyser when both geysers on and above 4kW non-essential
-  - alias: Turn off front geyser when high kW
-    mode: single
-    trigger:
-      - platform: numeric_state
-        entity_id: sensor.energy_non_essentials
-        above: '4400'
-    condition:
-      - condition: state
-        entity_id: switch.main_bathroom_geyser
-        state: 'on'
-      - condition: state
-        entity_id: switch.front_bathroom_geyser
-        state: 'on'
-      - condition: time
-        after: '8:00:00'
-        before: '16:59:59'
-    action:
-      - service: switch.turn_off
-        data:
-          entity_id: switch.front_bathroom_geyser
+  #- alias: Turn off front geyser when high kW
+  #  mode: single
+  #  trigger:
+  #    - platform: numeric_state
+  #      entity_id: sensor.energy_non_essentials
+  #      above: '4400'
+  #  condition:
+  #    - condition: state
+  #      entity_id: switch.main_bathroom_geyser
+  #      state: 'on'
+  #    - condition: state
+  #      entity_id: switch.front_bathroom_geyser
+  #      state: 'on'
+  #    - condition: time
+  #      after: '8:00:00'
+  #      before: '16:59:59'
+  #  action:
+  #    - service: switch.turn_off
+  #      data:
+  #        entity_id: switch.front_bathroom_geyser
