--- a/packages/lights/light_motion_timers_lounge.yaml
+++ b/packages/lights/light_motion_timers_lounge.yaml
@@ -21,6 +21,7 @@ automation:
       service: light.turn_off
       data:
         entity_id: light.lounge
+        transition: 10
   
   ### Lounge Lights
   # Motion = Turn on
@@ -43,6 +44,7 @@ automation:
       - service: light.turn_on
         data_template:
           entity_id: light.lounge
+          transition: 10
           brightness: >-
             {%- if(is_state('alarm_control_panel.home_alarm','armed_home')) -%}
             30
