--- a/packages/lights/light_braai_room.yaml
+++ b/packages/lights/light_braai_room.yaml
@@ -19,7 +19,7 @@ automation:
     action:
       - service: light.turn_off
         data:
-          entity_id: light.braai_room_lights
+          entity_id: light.braai_room
 
   ### Turn on Kitchen Lights when movement
   # Motion = Turn on
@@ -40,7 +40,7 @@ automation:
     action:
       - service: light.turn_on
         data_template:
-          entity_id: light.braai_room_lights
+          entity_id: light.braai_room
           #brightness: >-
           #  {%- if(is_state('input_boolean.kitchenwork','on')) -%}
           #  185
