--- a/logging/logger.yaml
+++ b/logging/logger.yaml
@@ -7,15 +7,15 @@
 
 # Log Severities: notset, debug, info, warn, warning, error, fatal, critical
 
-default: warn
+default: error
 # default: debug
 logs:
   #root: debug
   homeassistant: fatal
-  homeassistant.loader: error
-  # homeassistant.core: debug
-  # homeassistant.helpers.entity: error
-  #homeassistant.helpers.script: debug
+  homeassistant.core: info
+  homeassistant.config: debug
+  homeassistant.helpers.entity: error
+  homeassistant.helpers.script: debug
 
   custom_components.localtuya: fatal
 
@@ -58,3 +58,8 @@ logs:
   aioharmony.harmonyclient: fatal
 
   homeassistant.components.alexa: debug
+  alexapy.alexawebsocket: error
+
+  aiohttp.server: fatal
+  pychromecast.socket_client: fatal
+  plexwebsocket: fatal
