--- a/packages/energy/goodwe_dod.yaml
+++ b/packages/energy/goodwe_dod.yaml
@@ -18,19 +18,33 @@ script:
   ######################################################################
   goodwe_set_dod:
     sequence:
+      - service: script.goodwe_set_dod_action
+        data:
+          forecast: "{{ forecast }}"
+          dod: >
+            {% set forecast_int = forecast|int %}
+            {% if forecast_int >= 23 %}70
+            {% elif forecast_int >= 20 and forecast_int < 23 %}65
+            {% elif forecast_int >= 18 and forecast_int < 20 %}60
+            {% elif forecast_int >= 16 and forecast_int < 18 %}50
+            {% elif forecast_int >= 12 and forecast_int < 16 %}40
+            {% elif forecast_int >= 10 and forecast_int < 12 %}30
+            {% else %}16{% endif -%}
+
+  goodwe_set_dod_action:
+    sequence:
       - service: input_number.set_value
         target:
           entity_id: input_number.set_goodwe_dod
         data:
           value: >
-            {% set forecast_int = forecast|int %}
-            {% if forecast_int >= 23 %}70
-            {% elif forecast_int >= 20 and forecast_int < 23 %}60
-            {% elif forecast_int >= 18 and forecast_int < 20 %}55
-            {% elif forecast_int >= 16 and forecast_int < 18 %}50
-            {% elif forecast_int >= 12 and forecast_int < 16 %}40
-            {% elif forecast_int >= 10 and forecast_int < 12 %}30
-            {% else %}16{% endif -%}
+            {{ dod }}
+      - service: script.log
+        data:
+          icon: ':zap:'
+          object: 'GoodWe'
+          message: >
+            Setting DoD to {{ dod }} based on {{ forecast }}kWh forecast
 
 automation:
   # Input that sets DoD on GoodWe Inverter
@@ -47,6 +61,12 @@ automation:
         data:
           entity_id: sensor.goodwe_inverter
           ongrid_battery_dod: "{{ states('input_number.set_goodwe_dod')|int }}"
+      - service: script.log
+        data:
+          icon: ':zap:'
+          object: 'GoodWe'
+          message: >
+            Setting DoD to {{ states('input_number.set_goodwe_dod')|int }} based on input value updated
     mode: queued
     max: 2
 
@@ -85,21 +105,24 @@ automation:
         data:
           entity_id: timer.main_geyser
 
-  ## 9% at 9:00am
+  ## 16% at 10:00am
   - id: '1605879219607'
     alias: Goodwe DoD Day
     description: Set max DoD to 16% during the day - leave battery for evening use
     trigger:
       - platform: time
         at: '10:00:00'
-    condition: []
+    condition:
+      - condition: numeric_state
+        entity_id: sensor.solcast_forecast_energy_today_predicted
+        below: '18'
     action:
       - service: input_number.set_value
         target:
           entity_id: input_number.set_goodwe_dod
         data:
           value: >
-            {% set soc_today = states('sensor.solcast_forecast')|int %}
+            {% set soc_today = states('sensor.solcast_forecast_energy_today_predicted')|int %}
             {% if soc_today <= 10 %}1
             {% else %}16{% endif -%}
     mode: single
@@ -152,6 +175,9 @@ automation:
       - condition: numeric_state
         entity_id: sensor.eskom_loadshedding_stage
         above: 4
+      - condition: numeric_state
+        entity_id: sensor.solcast_forecast_energy_today_predicted
+        below: 20
     action:
       - service: input_number.set_value
         target:
@@ -169,7 +195,8 @@ automation:
       - condition: template
         value_template: >-
           {% set start_time = state_attr('input_datetime.main_geyser_on_time', 'timestamp') | int | timestamp_custom('%H:%M', False) %}
-          {{ ((start_time <= states('sensor.time') <= '06:00') and (states('sensor.solcast_forecast')|float < 21)) or ('09:00' < states('sensor.time')) }}
+          {{ ((start_time <= states('sensor.time') <= '06:00') and (states('sensor.solcast_forecast')|float < 21)) }}
+        # {{ ((start_time <= states('sensor.time') <= '06:00') and (states('sensor.solcast_forecast')|float < 21)) or ('09:00' < states('sensor.time')) }}
     action:
       - service: input_number.set_value
         target:
