--- a/packages/lights/light_motion_mainbedroom.yaml
+++ b/packages/lights/light_motion_mainbedroom.yaml
@@ -48,7 +48,12 @@ automation:
       - service: light.turn_on
         data_template:
           entity_id: light.main_bedroom
-          transition: 30
+          transition: >
+            {%- if(is_state('binary_sensor.either_parent_phones_charging','on')) -%}
+            150
+            {%- else -%}
+            30
+            {%- endif -%}
           brightness_pct: >-
             {% set hours = [[0,18],[500,19],[600,20],[630,21],[700,25],[730,30],
                           [800,30],[900,30],[1630,30],[1700,30],[1730,30],
